start making the api routing support multiple thingifiers